# wordle

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  TODO.md  build_ghpage.sh  build_static.sh  gui.sh  index.html  solve.sh  tui.sh  wasm.sh
.github/ghpage/: index.html  main.js  perf.js  solvewasm.js  solvewasm_bg.wasm  styles.css
.github/workflows/: static.yml
dictionary/: Cargo.toml
dictionary/src/: lib.rs
doc/: CREDITS.md  asciinema.cast
numformat/: Cargo.toml
numformat/src/: lib.rs
solve/: Cargo.toml
solve/src/: app.rs  main.rs  results.rs
solveapp/: Cargo.toml
solveapp/src/: lib.rs
solvegui/: Cargo.toml
solvegui/assets/: wordle_logo_192x192.rgba
solvegui/src/: app.rs  main.rs
solver/: Cargo.toml
solver/src/: lib.rs
solvetui/: Cargo.toml
solvetui/src/: app.rs
solvewasm/: .gitignore  Build.sh  BuildSingle.sh  Cargo.toml  LaunchURL.sh  build.sh
solvewasm/package/: Cargo.toml
solvewasm/package/src/: main.rs  multi.rs  single.rs
solvewasm/src/: lib.rs
solvewasm/template/: index.htm  index.html  main.js  styles.css
