[package]
name = "solve"
description = "Solve a countdown letters game"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }

dictionary = { path = "../dictionary" }
solver = { path = "../solver" }
numformat = { path = "../numformat" }

[target.'cfg(any(unix, windows))'.dependencies]
terminal_size = "0.2.1"
