[package]
name = "solve"
description = "Solve a wordle game"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.25.0"
clap = { version = "4.0.29", features = ["derive"] }

dictionary = { path = "../dictionary" }
solver = { path = "../solver" }
