[package]
name = "solvetui"
description = "Solve a wordle game"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.28.0"
ratatui = "0.28.0"
clap = { version = "4.5.15", features = ["derive"] }

dictionary = { path = "../dictionary" }
solveapp = { path = "../solveapp" }
