[package]
name = "solvewasm"
version = "0.1.0"
edition = "2024"
authors = ["Andrew Ward (andy.ward.uk@gmail.com)"]
description = "Wordle solver WASM web application"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dictionary = { path = "../dictionary" }
solveapp = { path = "../solveapp" }
wasm-bindgen = "0.2"
